[package]
name = "lalrpop-calculator"
version = "0.1.0"
edition = "2021"
authors = ["duskmoon (Campbell He)"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19"

[dependencies]
lalrpop-util = { version = "0.19", features = ["lexer"] }
regex = "1.5"
rustyline = "9.1"
